--- a/css/style.default.css
+++ b/css/style.default.css
@@ -165,7 +165,7 @@ p.social a.email {
   font-style: italic;
 }
 .copyright p.credit {
-  text-align: right;
+  text-align: center;
 }
 .copyright p.credit a {
   color: #eeeeee;
